--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@ header {
 }
 .logo {
   padding-top: 20px;
-  padding-left: 60px;
+  padding-left: 120px;
 }
 .links {
   margin-top: 35px;
@@ -31,6 +31,7 @@ header {
 .links li {
   margin: 0 20px;
   border: 1px solid gray;
+  border-radius: 10%
 }
 #customer-name {
   border: none;
