--- a/app/assets/stylesheets/public/genres.scss
+++ b/app/assets/stylesheets/public/genres.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the public::genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.search-table {
+  margin-top: 40px;
+  border: 1px solid gray;
+}
+.search-table thead {
+  border-bottom: 1px solid gray;
+}
+
+.search-table th {
+  font-size: 18px;
+  padding: 3px 50px;
+}
+.genre-item {
+  margin: 30pxx;
+}
