--- a/app/assets/stylesheets/public/products.scss
+++ b/app/assets/stylesheets/public/products.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the public::products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.product {
+  margin-top: 35px;
+}
+.product-info {
+  margin-top: 20px;
+}
+.product-info p {
+  margin: 20px 0;
+}
+
+.select-box {
+  margin-left: 10px;
+}
