--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <%= render 'public/genres/genre_search', genres: @genres %>
     <div class="col-md-9">
-      <div class="row">
+      <div class="row product">
         <div class="col-md-3">
           <h3>商品一覧 <small>(全<%= @products.count %>件)</small></h3>
         </div>
