--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-offset-2 col-xs-7">
+      <div class="col-xs-2">
        <h4 class="header-background">会員一覧</h4>
+      </div>
 
       <table class="table table-hover">
 	  <tr>
