--- a/app/views/public/cart_products/_cart.html.erb
+++ b/app/views/public/cart_products/_cart.html.erb
@@ -2,7 +2,9 @@
   <tbody>
     <tr>
       <td>
-        <%= attachment_image_tag cart_product.product, :image, fallback: "no_image.png", size:'50x50' %>
+        <%= link_to product_path(cart_product.product) do %>
+          <%= attachment_image_tag cart_product.product, :image, fallback: "no_image.png", size:'50x50' %>
+        <% end %>
         <%= cart_product.product.name %>
       </td>
       <td>
