--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md">
     <h3><mark>注文情報入力</mark></h3>
-    <%= form_with model: @order, url: confirm_orders_path, method: :get, local: true do |f| %>
+    <%= form_with model: @order, url: confirm_orders_path, local: true do |f| %>
 
      <h3>支払方法</h3>
       <div>
