--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,3 +1,4 @@
+<div class="row">
 <h3>マイページ</h3>
 
 <p>登録情報
@@ -37,3 +38,4 @@
 
 <p><strong>注文一覧</strong></p>
   <%= link_to "一覧を見る", class: "btn btn-primary" %>
+</div>
