--- a/app/assets/stylesheets/public/orders.scss
+++ b/app/assets/stylesheets/public/orders.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the public::orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.order-info {
+  margin-top: 10px;
+}
+.order-table {
+  margin-top: 40px;
+}
+.payment-info {
+  padding-top: 30px;
+}
