--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,72 +1,105 @@
+<div class="row">
+  <h3 class="header-background col-md-2">注文履歴詳細</h3>
+</div>
 
-
-<div class="container">
-  
-  <div class="row">
-    <h3><mark>注文履歴詳細</mark></h3>
+<div class="row">
+  <div class="col-md-2">
+    <h4><b>購入者</b></h4>
   </div>
-  
-  <div class="row">
-    <h4>購入者</h4>
-    <%= link_to admin_customer_path(@customer) do %>
-      <%= @customer.last_name %> <%= @customer.first_name %>
-    <% end %>
-    
-    <h4>配送先</h4>
+  <div class="col-md-4 order-info">
+    <%= link_to @customer.full_name, admin_customer_path(@customer)%>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-2">
+    <h4><b>配送先</b></h4>
+  </div>
+  <div class="col-md-4 order-info">
     〒<%= @order.postal_code.to_s.insert(3, "-") %>
     <%= @order.address %><br />
     <%= @order.name %>
-    
-    <h4>支払方法</h4>
+  </div>
+</div>
+
+<div class="row"> 
+  <div class="col-md-2">
+    <h4><b>支払方法</b></h4>
+  </div>
+  <div class="col-md-4 order-info">
     <%= @order.payment_type %>
-    
-    <h4>注文ステータス</h4>
+  </div>
+</div>
+
+<div class="row"> 
+  <div class="col-md-2">
+    <h4><b>注文ステータス</b></h4>
+  </div>
+  <div class="col-md-4 order-info">
     <%= form_with model: @order, url: admin_order_path(@order), local: true do |f| %>
       <%= f.select :status, Order.statuses.keys %>
+      <%#= f.select :status, options_for_select(Order.statuses.keys, selected: @order.status.values) %>
       <%= f.submit "更新", class:'btn btn-info' %>
     <% end %>
   </div>
-  
-  <div class="row">
-    <div class="col-md-8">
-      <table class="table">
-        <thead>
-            <tr>
-                <td>商品名</td>
-                <td>単価(税込み)</td>
-                <td>数量</td>
-                <td>小計</td>
-                <td>制作ステータス</td>
-            </tr>
-        </thead>
-        <tbody>
-          <% @order_products.each do |order_product| %>
-            <tr>
-                <td><%= order_product.product.name %></td>
-                <td><%= order_product.price.to_s(:delimited) %></td>
-                <td><%= order_product.amount %></td>
-                <td><%= order_product.total_price.to_s(:delimited) %></td>
-                <td>
-                  <%= form_with model: order_product, url: admin_order_product_path(order_product), local: true do |f| %>
-                    <%= f.select :making_status,OrderProduct.making_statuses.keys %>
-                    <%= f.submit "更新", class:'btn btn-info' %>
-                  <% end %>
-                </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-    
-    <div class="col-md-4">
-      <h4>商品合計</h4>
-      <%= @order.order_total_price.to_s(:delimited) %>円
-      <h4>送料</h4>
-      <%= @order.postage %>円
-      <h4>請求金額合計</h4>
-      <%= @order.total_pay.to_s(:delimited) %>円
-    </div>
-   
+</div>
+
+<div class="row order-table">
+  <div class="col-md-8">
+    <table class="table">
+      <thead>
+          <tr class="active">
+              <td>商品名</td>
+              <td>単価(税込)</td>
+              <td>数量</td>
+              <td>小計</td>
+              <td>制作ステータス</td>
+          </tr>
+      </thead>
+      <tbody>
+        <% @order_products.each do |order_product| %>
+          <tr>
+              <td><%= order_product.product.name %></td>
+              <td><%= order_product.price.to_s(:delimited) %></td>
+              <td><%= order_product.amount %></td>
+              <td><%= order_product.total_price.to_s(:delimited) %></td>
+              <td>
+                <%= form_with model: order_product, url: admin_order_product_path(order_product), local: true do |f| %>
+                  <%= f.select :making_status,OrderProduct.making_statuses.keys %>
+                  <%#= f.select :making_status, options_for_select(OrderProduct.making_statuses.keys, selected: order_product.making_status_before_type_cast) %>
+                  <%= f.submit "更新", class:'btn btn-info' %>
+                <% end %>
+              </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
   
+  <div class="col-md-4 payment-info">
+    <div class="row">
+      <div class="col-md-5">
+        <h4><b>商品合計</b></h4>
+      </div>
+      <div class="col-md-3 order-info">
+        <%= @order.order_total_price.to_s(:delimited) %>円
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-5">
+        <h4><b>送料</b></h4>
+      </div>
+      <div class="col-md-3 order-info">
+        <%= @order.postage %>円
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-5">
+        <h4><b>請求金額合計</b></h4>
+      </div>
+      <div class="col-md-3 order-info">
+        <%= @order.total_pay.to_s(:delimited) %>円
+      </div>
+    </div>
+  </div>
 </div>
