--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 .header-background {
   background-color: #e6e6fa;
   text-align: center;
+}
 header {
   height: 120px;
   margin: 10px 10px 0 10px;
@@ -39,4 +40,17 @@ header {
 #customer-name {
   border: none;
   line-height: 50px;
+}
+//妻夫木追加(表の枠線なし)
+.table-noborder {
+  border-top-style: 0;
+  border-bottom-style: 0;
+}
+//妻夫木追加(サンクスメッセージの位置調整)
+.done {
+  padding-top: 200px;
+}
+//妻夫木追加(注文履歴詳細の一覧に戻るボタンの位置調整)
+.link-order-index {
+  padding-top: 50px;
 }
