--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md">
-    <h3><mark>注文履歴一覧</mark></h3>
-            <%#= form_with model: @order, url: orders_path, local: true do |f| %>
+    <h3 class="header-background col-md-2">注文履歴一覧</h3>
         <table class="active, table table-bordered">
 		<thead>
 			<tr class="active">
@@ -31,8 +30,13 @@
 				</td>
 				<td><%= order.total_payment.to_s(:delimited) %>円</td>
 				<td><%= order.status %></td>
-				<td><%= link_to '表示する', order_path(@order), data: {"turbolinks" => false}, class: 'btn btn-info' %></td>
+				<%#= form_with model: @order, url: orders_path(@order), local: true do |f| %>
+				<td>
+					<%= link_to '表示する', order_path(id: order), class: 'btn btn-primary' %>
+				</td>
 			</tr>
 			<% end %>
 		</tbody>
 		</table>
+		</div>
+		</div>
