--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,8 @@
 .header-background {
   background-color: #e6e6fa;
   text-align: center;
+}
+
 header {
   height: 120px;
   margin: 10px 10px 0 10px;
