--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .main-visual-background {
-  background-image: url(wood_toppage.jpg);
+  background-image: url(img/nagano-top.jpg);
   background-size: cover;
   height: 250px;
   position: relative;
@@ -11,7 +11,23 @@
 
 .main-visual-content {
   position: absolute;
-  top: 32%;
-  left: 19.5%;
-  background-color: #FFFFFF;
+  top: 25%;
+  left: 19%;
+  height: 100px;
+  background-color: rgba(224,255,255,0.65);
+  border-radius: 1em;
+}
+
+h1 {
+  text-align: center;
+}
+
+.about-content {
+  margin-top: 40px;
+}
+
+.about-content-text {
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
 }
