--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,10 +1,15 @@
-<h3>マイページ</h3>
+<div class="row">
+  <h3 class="header-background col-md-3">マイページ</h3>
+</div>
 
-<p>登録情報
+<div class="row">
+  <h3 class="col-md-2">登録情報</h3>
   <%= link_to "編集する", edit_customers_path, class: "btn btn-primary" %>
   <%= link_to "パスワードを変更する", edit_customer_password_path, class: "btn btn-primary" %>
-</p>
+</div>
 
+<div class="row">
+  <div class="col-md-8">
 <table class="table">
   <tr>
     <th>氏名</th>
@@ -31,9 +36,15 @@
     <td><%= @customer.email %></td>
   </tr>
 </table>
+</div>
+</div>
 
-<p><strong>配送先</strong></p>
-  <%= link_to "一覧を見る", class: "btn btn-primary" %>
+<div class="row">
+  <h3 class="col-md-2">配送先</h3>
+    <%= link_to "一覧を見る", deliveries_path, class: "btn btn-primary" %>
+</div>
 
-<p><strong>注文一覧</strong></p>
-  <%= link_to "一覧を見る", class: "btn btn-primary" %>
+<div class="row">
+  <h3 class="col-md-2">注文一覧</h3>
+    <%= link_to "一覧を見る", orders_path, class: "btn btn-primary" %>
+</div>
