--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
+      <div class="row">
       <h1>About</h1>
-
-      <p>ながのCakeは全国発送可能なケーキ屋さんです。<br>
-      お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-      様々なバリエーションをご用意しております。<br>
-      また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-      ぜひご注文ください。</p>
+      <div class="about-content">
+        <p class="about-content-text">ながのCakeは全国発送可能なケーキ屋さんです。<br>
+        お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+        様々なバリエーションをご用意しております。<br>
+        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+        ぜひご注文ください。</p>
+      </div>
+      </div>
     </div>
   </div>
 </div>
