--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,39 +1,39 @@
-<div class="container">
-  <div class="row">
-    <%= render 'public/genres/genre_search', genres: @genres %>
-    <div class="col-md-10">
-      <div class="row">
-        <div class="col-md-8 main-visual-background">
-          <div class="row main-visual-content">
-            <div class="col-md-12">
-              <p>ようこそ、NaganoCakeへ！<br>
-              このサイトは、ケーキ販売のECサイトになります。<br>
-              会員でない方も商品の閲覧はできますが、<br>
-              購入には会員登録が必要になります。<br>
-              </p>
-            </div>
+<div class="row">
+  <%= render 'public/genres/genre_search', genres: @genres %>
+  <div class="col-md-8">
+    <div class="row">
+      <div class="col-md-8 main-visual-background">
+        <div class="row main-visual-content">
+          <div class="col-md-12">
+            <p class="main-visual-content-text">ようこそ、NaganoCakeへ！<br>
+            このサイトは、ケーキ販売のECサイトになります。<br>
+            会員でない方も商品の閲覧はできますが、<br>
+            購入には会員登録が必要になります。<br>
+            </p>
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <h3>オススメ商品</h3>
-        <div class="row">
-          <% @products.each do |product| %>
-            <div class="col-md-3 recommend-products">
-              <%= attachment_image_tag(product, :image, size: "180x140", fallback: "no_image.png") %>
-              <p><%= product.name %></p>
-              <p>¥<%= product.price.to_s(:delimited) %></p>
-            </div>
-          <% end %>
-        </div>
-        <div class="row">
-          <div class="col-md-offset-10">
-            <%= link_to "もっと見る>", products_path %>
-          </div>
-        </div>
-      </div>
-
     </div>
+
+    <div class="row">
+      <h3>オススメ商品</h3>
+      <div class="row">
+        <% @products.each do |product| %>
+          <div class="col-md-3 recommend-products">
+            <%= link_to product_path(product) do %>
+              <%= attachment_image_tag(product, :image, size: "180x140", fallback: "no_image.png") %>
+            <% end %>
+            <p><%= link_to product.name, product_path(product) %></p>
+            <p>¥<%= product.price.to_s(:delimited) %></p>
+          </div>
+        <% end %>
+      </div>
+      <div class="row">
+        <div class="col-md-offset-10">
+          <%= link_to "もっと見る>", products_path %>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
