--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,16 +1,19 @@
-    <div class="row">
-        <div class="col-md">
-    <h3><mark>注文情報入力</mark></h3>
-    <%= form_with model: @order, url: confirm_orders_path, local: true do |f| %>
-
-     <h3>支払方法</h3>
-      <div>
-        <%= f.radio_button :payment_type, 'クレジットカード', checked: true %>
-        <%= f.label :payment_type, "クレジットカード", {value: "クレジットカード", style: "display: inline-block;"} %>
-      </div>
-      <div>
-        <%= f.radio_button :payment_type, '銀行振込' %>
-        <%= f.label :payment_type, "銀行振込", {value: "銀行振込", style: "display: inline-block;"} %>
+  <div class="row">
+    <h3 class="header-background col-md-3">注文情報入力</h3>
+  </div>
+      <%= form_with model: @order, url: confirm_orders_path, local: true do |f| %>
+  <div class="row">
+    <div class="col-md-12">
+    <h3>支払方法</h3>
+      <div class="col-md-12">
+        <div>
+          <%= f.radio_button :payment_type, 'クレジットカード', checked: true %>
+          <%= f.label :payment_type, "クレジットカード", {value: "クレジットカード", style: "display: inline-block;"} %>
+        </div>
+        <div>
+          <%= f.radio_button :payment_type, '銀行振込' %>
+          <%= f.label :payment_type, "銀行振込", {value: "銀行振込", style: "display: inline-block;"} %>
+        </div>
       </div>
     </div>
 ​
