--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -37,8 +37,9 @@
   </div>
   <div class="col-md-4 order-info">
     <%= form_with model: @order, url: admin_order_path(@order), local: true do |f| %>
-      <%= f.select :status, Order.statuses.keys %>
-      <%#= f.select :status, options_for_select(Order.statuses.keys, selected: @order.status.values) %>
+      <%#= f.select :status, Order.statuses.keys %>
+      <%#= f.select :status, Order.statuses.keys.to_a %>
+      <%= f.select :status, options_for_select(Order.statuses.to_a, selected: @order.status_before_type_cast) %>
       <%= f.submit "更新", class:'btn btn-info' %>
     <% end %>
   </div>
@@ -65,8 +66,7 @@
               <td><%= order_product.total_price.to_s(:delimited) %></td>
               <td>
                 <%= form_with model: order_product, url: admin_order_product_path(order_product), local: true do |f| %>
-                  <%= f.select :making_status,OrderProduct.making_statuses.keys %>
-                  <%#= f.select :making_status, options_for_select(OrderProduct.making_statuses.keys, selected: order_product.making_status_before_type_cast) %>
+                  <%= f.select :making_status, options_for_select(OrderProduct.making_statuses.to_a, selected: order_product.making_status_before_type_cast) %>
                   <%= f.submit "更新", class:'btn btn-info' %>
                 <% end %>
               </td>
