--- a/app/assets/stylesheets/public/orders.scss
+++ b/app/assets/stylesheets/public/orders.scss
@@ -11,4 +11,20 @@
 }
 .payment-info {
   padding-top: 30px;
+
+//妻夫木追加(サンクスメッセージの位置調整)
+}
+.done-div {
+  margin: 0 auto;
+  padding-top: 200px;
+}
+.done {
+  text-align: center;
+}
+
+//注文情報入力画面の新しい住所を入力のフォーム位置
+.linkt {
+  margin: 0 auto;
+  margin-right: 20px;
+  border-radius: 10%
 }
