--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,22 +1,27 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-    <h3><mark>ジャンル一覧・追加</mark></h3>
+<div class="row">
+	<h3 class="header-background col-md-3">ジャンル一覧・追加</h3>
 	<%= form_with model: @genre, url: admin_genres_path, local: true do |f| %>
-    <div>
-        <%= f.label :ジャンル %>
-        <%= f.text_field :name, class: 'genre_name' %>
-        <%= f.radio_button :is_active, :true %>
-        <%= f.label :is_active, "有効", {value: :true, style: "display: inline-block;"} %>
-        <%= f.radio_button :is_active, :false %>
-        <%= f.label :is_active, "無効", {value: :false, style: "display: inline-block;"} %>
-        <%= f.submit '追加', class: 'btn btn-info' %>
+</div>
+<div class="row">
+	<div class="col-md-6" >
+    	<div>
+	        <%= f.label :ジャンル %>
+	        <%= f.text_field :name, class: 'genre_name' %>
+	        <%= f.radio_button :is_active, :true %>
+	        <%= f.label :is_active, "有効", {value: :true, style: "display: inline-block;"} %>
+	        <%= f.radio_button :is_active, :false %>
+	        <%= f.label :is_active, "無効", {value: :false, style: "display: inline-block;"} %>
+	        <%= f.submit '追加', class: 'btn btn-info' %>
+    	</div>
     </div>
+   </div>
     <% end %>
 
-    <table class="table table-hover table-inverse">
+<div class="row">
+	<div class="col-md-6">
+    <table class="table table-hover table-inverse genre-index">
 		<thead>
-			<tr>
+			<tr class="active">
 				<th>ジャンル</th>
 				<th>状態</th>
 				<th colspan="3"></th>
@@ -24,7 +29,7 @@
 		</thead>
 
 		<tbody>
-			<% @genres.each do |genre| %>
+		<% @genres.each do |genre| %>
 			<tr>
 				<td><%= genre.name %></td>
 				<td>
@@ -36,6 +41,8 @@
 				</td>
 				<td><%= link_to '編集する', edit_admin_genre_path(genre), class: 'btn btn-primary' %></td>
 			</tr>
-			<% end %>
+		<% end %>
 		</tbody>
 	</table>
+</div>
+</div>
