--- a/app/views/public/orders/done.html.erb
+++ b/app/views/public/orders/done.html.erb
@@ -1,5 +1,7 @@
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <h3 class="text-center done"><strong>🍰ご購入ありがとうございました！🍰</strong></h3>
+    <div class="done-div">
+      <h2 class="done"><strong>🍰ご購入ありがとうございました！🍰</strong></h2>
+      <h5 class="done">(10秒後にトップページに戻ります。)</h5>
+      <meta http-equiv="refresh" content="10;URL=/">
       </div>
       </div>
