--- a/app/assets/stylesheets/public/genres.scss
+++ b/app/assets/stylesheets/public/genres.scss
@@ -5,18 +5,24 @@
 .search-table {
   margin-top: 40px;
   padding: 10px;
-  border: 1px solid gray;
+
 }
 .search-table thead {
-  border-bottom: 1px solid gray;
+  color: #5d1b1d;
+  background-color: #F5F3E9;
+  border: 1px solid #D2B48C;
 }
 .search-table th {
-  font-size: 18px;
-  padding: 3px 45px;
+  font-size: 15px;
+  padding: 10px 45px;
+}
+.search-table tbody {
+  border: 1px solid #D2B48C;
+  border-top: none;
 }
 .genre-item {
   display: block;
-  color: black;
-  padding-left: 60px;
-  margin: 7px 0;
+  color: #5d1b1d;
+  text-align: center;
+  margin: 13px 0;
 }
