--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -12,8 +12,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6"></div>
-  <div class="col-md-3">
+  <div class="col-md-3 col-md-offset-6">
     <%= paginate @products %>         
   </div>
 </div>
