--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -3,31 +3,6 @@
       <div class="col-xs-2">
        <h4 class="header-background">会員一覧</h4>
       </div>
-
-      <table class="table table-hover">
-	  <tr>
-	    <th>会員ID</th>
-	    <th>氏名</th>
-	    <th>メールアドレス</th>
-	    <th>ステータス</th>
-    </tr>
-          <% @customer.each do |customer| %>
-          <tr>
-              <td><%= customer.id %></td>
-              <td>
-                  <%= link_to admin_customer_path(customer) do %>
-                     <%= customer.last_name %> <%= customer.first_name %> 
-                  <% end %>
-              </td>
-              <td><%= customer.email %></td>
-				      <td>
-					      <% if customer.is_deleted == FALSE %>
-						      <%= '有効' %>
-					      <% else %>
-						      <%= '退会' %>
-					      <% end %>
-              </td>
-          <% end %>
-      </table>
+      <%= render 'admin/customers/customer_list', customers: @customers %>
     </div>
   </div>
