[fix]レイアウト完了版(12/13 妻夫木)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,7 @@ header {
 
 //妻夫木追加(Adminジャンル一覧の位置調整)
 .genre-index {
-  margin-left: 2000px;
+  margin-top: 10px;
 }
 //妻夫木追加(注文履歴詳細の一覧に戻るボタンの位置調整)
 .link-order-index {
