--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -18,7 +18,7 @@
     <% end %>
 
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-4">
     <table class="table table-hover table-inverse genre-index">
 		<thead>
 			<tr class="active">
@@ -31,15 +31,15 @@
 		<tbody>
 		<% @genres.each do |genre| %>
 			<tr>
-				<td><%= genre.name %></td>
-				<td>
+				<td class="genre-hyoji"><%= genre.name %></td>
+				<td class="genre-hyoji">
 					<% if genre.is_active == TRUE %>
 						<%= '有効' %>
 					<% else %>
 						<%= '無効' %>
 					<% end %>
 				</td>
-				<td><%= link_to '編集する', edit_admin_genre_path(genre), class: 'btn btn-primary' %></td>
+				<td><%= link_to '編集する', edit_admin_genre_path(genre), class: 'btn btn-primary genre-bt' %></td>
 			</tr>
 		<% end %>
 		</tbody>
