--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,6 +1,6 @@
     <div class="row">
-        <div class="col-md">
-    <h3 class="header-background col-md-2">注文履歴一覧</h3>
+        <div class="col-md-12">
+    <h3 class="header-background col-md-3">注文履歴一覧</h3>
         <table class="active, table table-bordered">
 		<thead>
 			<tr class="active">
