--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -39,30 +39,28 @@
         <%= f.radio_button :address_type, :C %>
         <%= f.label :address_type, "新しいお届け先", {value: :C, style: "display: inline-block;"} %></br>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-      <form class="form-horizontal">
-       <div class="form_group">
-            <label class="col-sm-6 control-label">郵便番号(ハイフンなし)</label>
-            <div class="col-sm-6">
-              <%= f.text_field :postal_code, class: "form-control linkt" %>
+      <div class="new">
+        <div class="col-md-12 order-type-c">
+       <div class="form_group row">
+            <label class="col-sm-3 control-label">郵便番号(ハイフンなし)</label>
+            <div class="col-sm-3 newryoku">
+              <%= f.text_field :postal_code, class: "form-control" %>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-5 control-label">住所</label>
-            <div class="col-sm-7">
-              <%= f.text_field :address, class: "form-control linkt" %>
+        <div class="form-group row">
+            <label class="col-sm-3 control-label">住所</label>
+            <div class="col-sm-4">
+              <%= f.text_field :address, class: "form-control" %>
             </div>
         </div>
-        <div class="form_group">
-            <label class="col-sm-6 control-label">宛名</label>
-            <div class="col-sm-6">
+        <div class="form_group row">
+            <label class="col-sm-3 control-label">宛名</label>
+            <div class="col-sm-3">
               <%= f.text_field :name, class: "form-control" %>
             </div>
         </div>
       </div>
         </div>
-      </form>
       </div>
       <div class="text-center"><%= f.submit '確認画面に進む', class: 'btn btn-info' %></div>
     <% end %>
