最終マージ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ header a {
   border-radius: 10%;
 }
 
-input[type="text"] {
+.input-group input[type="text"] {
   border: 2px solid #5d1b1d;
   width: 200px;
   height: 35px;
