[Add]注文ステータス非同期

--- a/app/assets/stylesheets/public/genres.scss
+++ b/app/assets/stylesheets/public/genres.scss
@@ -21,8 +21,12 @@
   border-top: none;
 }
 .genre-item {
-  margin: 30pxx;
+  display: block;
+  color: #5d1b1d;
+  text-align: center;
+  margin: 13px 0;
 }
+
 .genre-hyoji {
   margin-top: 0;
 }
