最終プッシュ

--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-9">
     <div class="row product">
       <div class="col-md-3">
-        <h3>商品一覧 <small>(全<%= @products.count %>件)</small></h3>
+        <h3 class="header-background">商品一覧 <small>(全<%= @products.count %>件)</small></h3>
       </div>
     </div>
     <!--商品一覧-->
