--- a/app/assets/stylesheets/admin/genres.scss
+++ b/app/assets/stylesheets/admin/genres.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the admin::genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//妻夫木追加(Adminジャンル一覧の位置調整)
+.genre-index {
+  margin-top: 10px;
+}
