--- a/app/views/admin/searches/search.html.erb
+++ b/app/views/admin/searches/search.html.erb
@@ -2,13 +2,17 @@
 
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h3><%= @title %>検索結果</h3>
-    <% if @model == 'customer' && @customers.exists? %>
-      <%= render 'admin/customers/customer_list', customers: @customers %>
-    <% elsif @model == 'product' && @products.exists? %>
-      <%= render 'admin/products/product_list', products: @products %>
-    <% else %>
-      <p>該当する検索結果はありません</p>
-    <% end %>
+    <h3 class="header-background col-md-4"><%= @title %>検索結果</h3>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+  <% if @model == 'customer' && @customers.exists? %>
+    <%= render 'admin/customers/customer_list', customers: @customers %>
+  <% elsif @model == 'product' && @products.exists? %>
+    <%= render 'admin/products/product_list', products: @products %>
+  <% else %>
+  <p>該当する検索結果はありません</p>
+  <% end %>
   </div>
 </div>
