--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -62,7 +62,7 @@
 
 	<div class="row">
       <div class="col-md-12">
-  			 	<table class="table table-notable">
+  			 	<table class="table">
 					<thead>
 					</thead>
 					<tbody>
